--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,11 @@ org.gradle.jvmargs=-Xmx4G
 minecraft_version=1.20.1
 loader_version=0.14.22
 kotlin_version=1.9.10
-ktfmt_version=0.12.0
 parchment_mappings=2023.07.30
 
 
 # Mod Properties
-mod_version = 1.0-b.3
+mod_version = beta.1
 mod_id = mosaicapi
 
 
