--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,13 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
+minecraft_version=1.20.2
 loader_version=0.14.22
-parchment_mappings=2023.07.30
+mappings_version=1
 
 
 # Mod Properties
-mod_version = beta
+mod_version = SNAPSHOT
 mod_id = mosaicapi
 
 
