--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,9 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
-minecraft_version=1.20.2
-loader_version=0.14.22
-mappings_version=1
-
+minecraft_version=23w40a
+loader_version=0.14.23
+mappings_version=3
 
 # Mod Properties
 mod_version = SNAPSHOT
@@ -14,4 +13,6 @@ mod_id = mosaicapi
 
 
 # Mod Dependencies
-mixin_extras = 0.2.0-beta.9
+mixin_extras = 0.2.0-rc.5
+vineflower = 1.9.3
+jakarta = 2.1.1
