--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ mod_id = mosaicapi
 
 
 # Mod Dependencies
-mixin_extras = 0.2.0-rc.5
-vineflower = 1.9.3
-jakarta = 2.1.1
+mixin_extras_version = 0.2.0-rc.5
+vineflower_version = 1.9.3
+jakarta_version = 2.1.1
