--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,26 +5,16 @@ jobs:
   build:
     strategy:
       matrix:
-        # Use these Java versions
-        java: [
-          21
-        ]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
         uses: actions/checkout@v3
-      - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v3
-        with:
-          java-version: ${{ matrix.java }}
-          distribution: 'oracle'
-      - name: make gradle wrapper executable
-        run: chmod +x ./gradlew
+      - name: setup java & gradle
+        uses: sdkman/sdkman-action@v1
+        id: sdkman
       - name: build
-        run: ./gradlew build
+        run: gradle build
       - name: capture build artifacts
         uses: actions/upload-artifact@v3
         with:
