--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v3
       - name: setup java & gradle
-        uses: sdkman/sdkman-action@v1
+        uses: sdkman/sdkman-action@main
         id: sdkman
       - name: build
         run: gradle build
