--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
         id: sdkman
       - name: configure sdkman
         run: source "/home/runner/.sdkman/bin/sdkman-init.sh"
+      - name: configure java
+        run: sdk use java "$(sdk current java | tail -1 | awk -F'. ' ' { print $NF } ')" > /dev/null 2>&1
       - name: build
         run: gradle build
       - name: capture build artifacts
