--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     strategy:
       matrix:
+        java: [21]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -13,10 +14,11 @@ jobs:
       - name: setup java & gradle
         uses: sdkman/sdkman-action@main
         id: sdkman
-      - name: configure sdkman
-        run: source "/home/runner/.sdkman/bin/sdkman-init.sh"
-      - name: configure java
-        run: export JAVA_HOME=${SDKMAN_DIR}/candidates/java/current
+      - name: setup jdk ${{ matrix.java }}
+        uses: actions/setup-java@v3
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'oracle'
       - name: build
         run: gradle build
       - name: capture build artifacts
