Added plugin loading

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
-minecraft_version=23w40a
-loader_version=0.14.23
-mappings_version=3
+minecraft_version=23w43a
+loader_version=0.14.24
+mappings_version=2
 
 # Mod Properties
 mod_version = SNAPSHOT
@@ -13,6 +13,6 @@ mod_id = mosaicapi
 
 
 # Mod Dependencies
-mixin_extras_version = 0.2.0-rc.5
+mixin_extras_version = 0.2.0
 vineflower_version = 1.9.3
 jakarta_version = 2.1.1
